added docs folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="image-section">
         <img
           class="img img-profile"
-          src="/assets/profile.png"
+          src="./docs/assets/images/profile.png"
           alt="Profile Image"
         />
       </div>
@@ -24,7 +24,7 @@
             href="https://www.linkedin.com/in/bekarys-nurgasym-689256259/"
             target="_blank"
           >
-            <img src="/icons/Vector.svg" alt="LinkedIn Icon" />
+            <img src="./docs/icons/Vector.svg" alt="LinkedIn Icon" />
             LinkedIn
           </a>
           <a
@@ -32,7 +32,7 @@
             href="https://github.com/beka-rizz"
             target="_blank"
           >
-            <img src="/icons/Vector-1.svg" alt="Github Icon" />
+            <img src="./docs/icons/Vector-1.svg" alt="Github Icon" />
             Github
           </a>
         </div>
@@ -63,14 +63,18 @@
       </div>
       <div class="footer-section">
         <div class="social-media fl g-50">
-          <a href="https://www.instagram.com/" target="_blank" title="Don't click it! I don't have one.">
-            <img src="/icons/Vector-2.svg" alt="instagram icon" />
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            title="Don't click it! I don't have one."
+          >
+            <img src="./docs/icons/Vector-2.svg" alt="instagram icon" />
           </a>
           <a href="mailto:bekarysnurgassym@gmail.com">
-            <img src="/icons/Vector-3.svg" alt="email icon" />
+            <img src="./docs/icons/Vector-3.svg" alt="email icon" />
           </a>
           <a href="https://t.me/bekvrysss" target="_blank">
-            <img src="/icons/Vector-4.svg" alt="telegram icon" />
+            <img src="./docs/icons/Vector-4.svg" alt="telegram icon" />
           </a>
         </div>
       </div>
