fixed profile image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="card-wrapper r-10 fl center">
+    <div class="card-wrapper r-10 center">
       <div class="image-section">
         <img
           class="img img-profile"
